--- a/prato/index.html
+++ b/prato/index.html
@@ -2,7 +2,6 @@
 <html lang="it">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="last-modified" content="Thu, 17 May 2018 08:28:00 GMT" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità..">
         <meta name="author" content="">
@@ -11,7 +10,6 @@
         <meta property="og:url" content="http://agileday.it/mini/2018/prato/" />
         <meta property="og:title" content="Agile Venture Prato2018" />
         <meta property="og:description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.." />
-        <meta itemprop="image" content="http://agileday.it/mini/2018/prato/img/logoiadprato-400b.png"/>
 
         <title>Agile Venture Prato2018</title>
         <link rel="shortcut icon" href="img/favicon.png?2" />
@@ -55,7 +53,7 @@
                             <a href="#press">Press</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#c4p">C4P</a>
+                            <a href="#c4s">C4Sessions</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#location">Location</a>
@@ -96,7 +94,7 @@
                 <p>
                 Il mondo corre veloce e le uniche costanti sono le variabili.<br>
                 Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.<br>
-                L'alternativa Agile per migliorare la capacità di risposta ai cambiamenti e creare valore nel più breve tempo possibile.<br>
+                <b>L'alternativa Agile</b> per migliorare la capacità di <b>risposta ai cambiamenti</b> e <b>creare valore</b> nel più breve tempo possibile.<br>
                 Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori e le pratiche Agile.
                 </p>
             </div>
@@ -108,9 +106,10 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Programma</h2>
                     <br>
-                    <h3>Il programma sarà disponibile a breve, iscriviti alla newsletter per rimanere aggiornato!</h3>
+                    <h3>Il programma sarà disponibile a breve. <br>
+                        Iscriviti alla newsletter per non perdere tutti gli aggiornamenti.</h3>
                     <br>
-
+                </div>
             </div>
             <div class="page-scroll" style="margin-top: 50px">
                 <a href="#sponsor" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
@@ -126,7 +125,7 @@
                         Gli sponsor hanno donato servizi essenziali per la buona riuscita dell'evento.
                         <br/>
 
-                        <strong>Vuoi diventare sponsor?</strong> Scrivici: <a href="mailto:@stefania.calamai@google.com">tuscany4agile@google.com</a>
+                        <strong>Vuoi diventare sponsor?</strong> Scrivici: <br><a href="mailto:agileventureprato@agilemovement.it">agileventureprato@agilemovement.it</a>
 
                         <br/>
                     </p>
@@ -136,27 +135,12 @@
             <div class="row">
                 <div class="sponsor-list col-lg-12">
                     <div class="sponsor-container">
-                        <!--
+                        <img src="img/gold_sponsor.png" style="height: 10%; width: 10%; object-fit: contain"/>
                         <div class="sponsor-line">
                             <div class="sponsor-div">
-                                <p style="">Sponsor 1 s.r.l.</p>
+                                <p style=""><img src="img/sky_condivisione.jpg" style="height: 40%; width: 40%; object-fit: contain"/></p>
                             </div>
                         </div>
-                        <div class="sponsor-line">
-                            <div class="sponsor-div">
-                                <p style="">Sponsor 2</p>
-                            </div>
-                            <div class="sponsor-div">
-                                <p style="">Sponsor 3</p>
-                            </div>
-                            <div class="sponsor-div">
-                                <p style="">Sponsor 4 s.r.l.</p>
-                            </div>
-                            <div class="sponsor-div">
-                                <p style="">Sponsor 5 s.r.l.</p>
-                            </div>
-                        </div>
-                        -->
                     </div>
                 </div>
             </div>
@@ -180,22 +164,22 @@
             </div>
 
             <div class="page-scroll" style="margin-top: 20px">
-                <a href="#c4p" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+                <a href="#c4s" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
             </div>
         </section>
-        <section id="c4p" class="content-section text-center">
+        <section id="c4s" class="content-section text-center">
           <div class=container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                  <h2>Call 4 Paper<br/></h2>
+                  <h2>Call for sessions<br/></h2>
 
-                  <a href="mailto:stefania.calamai@gmail.com" class="abstract-link"><h4>Invia subito la tua proposta !</h4></a>
+                  <a href="mailto:agileventureprato@agilemovement.it" class="abstract-link"><h4>Invia subito la tua proposta !</h4></a>
                   <p>
-                      tuscany4agile@google.com
+                      <a href="mailto:agileventureprato@agilemovement.it" class="abstract-link">agileventureprato@agilemovement.it</a>
                       </p>
 
                   <p>
-                      <!--La call for proposals si è chiusa il <strong>31 giugno 2018</strong>.-->
+                      <!--La call for sessions si è chiusa il <strong>31 giugno 2018</strong>.-->
                   </p>
                 </div>
             </div>
@@ -207,15 +191,17 @@
 
         <section id="location" class="content-section">
           <div class="container">
+
             <div class="row text-center">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Location</h2>
                     <ul class="list-inline">
                         <li>
-                            <img src="img/logo_pin.png" style="vertical-align: inherit"/>
+                            <img src="img/logo_pin.png" style="height: 100%; width: 100%; object-fit: contain"/>
                         </li>
                         <li>
                             <p style="text-align: left">
+                                <br/>
                                 Polo Universitario Città di Prato
                                 <br/>
                                 Piazza Giovanni Ciardi, 25
@@ -235,11 +221,9 @@
                         </p>
                     </div>
                     <div class="col-sm-6">
-                        <p>
-                            Il Polo Universitario Città di Prato si trova all'uscita
-                    della stazione di <strong>Prato Porta al Serraglio</strong>.
-                    Il treno è sicuramente il mezzo più pratico per
-                    raggiungerci.
+                        <p>Il PIN – Polo Universitario “Città di Prato” è situato nel pieno centro storico di Prato, a cento metri dal Duomo,
+                            e vicinissimo alla Stazione Ferroviaria di  <strong>Prato Porta al Serraglio</strong>.
+                            Il treno è sicuramente il mezzo più pratico per  raggiungerci.
                     </p>
                     </div>
                 </div>
@@ -253,14 +237,18 @@
                         <p>
                             Per raggiungere il Polo Universitario Città di Prato utilizzare
                     l'uscita autostradale <strong>Prato Est</strong> e seguire le indicazioni per il centro città.
-                            L'università si trova a 500 metri dal duomo, nella parte nord nella città.
+                            L'università si trova a 100 metri dal duomo, nella parte nord nella città.
                             E' presente un ampio parcheggio.
                         </p>
                     </div>
                 </div>
-              <div align="center"><img src="img/mappa.PNG"/> </div>
+                <div class="content-section text-center">
+                    <img src="img/mappa.PNG" style="height: 80%; width: 80%; object-fit: contain"/>
+                </div>
+
             </div>
-            <div class="page-scroll" style="margin-top: 50px">
+
+              <div class="page-scroll" style="margin-top: 50px" align="center">
                 <a href="#staff" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
             </div>
         </section>
@@ -273,34 +261,39 @@
             </div>
 
             <div class="staff_member">
-                <a href="https://www.linkedin.com/in/massimoiacolare" target="_blank"><img src="img/staff.png" alt="Massimo Iacolare" class="staff_member_img" />
+                <a href="https://www.linkedin.com/in/massimoiacolare" target="_blank"><img src="img/massimo_iacolare.PNG" alt="Massimo Iacolare" class="staff_member_img" />
                 <br/>
                     Massimo Iacolare</a>
             </div>
             <div class="staff_member">
-                <a href="https://www.linkedin.com/in/andrea-vallotti-b379313" target="_blank"><img src="img/staff.png" alt="Andrea Vallotti" class="staff_member_img" />
+                <a href="https://www.linkedin.com/in/andrea-vallotti-b379313" target="_blank"><img src="img/andrea_vallotti.PNG" alt="Andrea Vallotti" class="staff_member_img" />
                 <br/>
                     Andrea Vallotti</a>
             </div>
             <div class="staff_member">
-                <a href="https://www.linkedin.com/in/zinanni" target="_blank"><img src="img/staff.png" alt="Simone Zinanni" class="staff_member_img" />
+                <a href="https://www.linkedin.com/in/zinanni" target="_blank"><img src="img/simone_zinanni.PNG" alt="Simone Zinanni" class="staff_member_img" />
                 <br/>
                     Simone Zinanni</a>
             </div>
             <div class="staff_member">
-                <a href="https://www.linkedin.com/in/stefania-calamai-66a7196" target="_blank"><img src="img/staff.png" alt="Stefania Calamai" class="staff_member_img" />
+                <a href="https://www.linkedin.com/in/stefania-calamai-66a7196" target="_blank"><img src="img/stefania_calamai.PNG" alt="Stefania Calamai" class="staff_member_img" />
                 <br/>
                     Stefania Calamai</a>
             </div>
             <div class="staff_member">
-                <a href="https://www.linkedin.com/in/marco-castellani-7266301" target="_blank"><img src="img/staff.png" alt="Marco Castellani" class="staff_member_img" />
+                <a href="https://www.linkedin.com/in/marco-castellani-7266301" target="_blank"><img src="img/marco_castellani.PNG" alt="Marco Castellani" class="staff_member_img" />
                     <br/>
                     Marco Castellani</a>
             </div>
             <div class="staff_member">
-                <a href="https://www.linkedin.com/in/andreagelli" target="_blank"><img src="img/staff.png" alt="Andrea Gelli" class="staff_member_img" />
+                <a href="https://www.linkedin.com/in/andreagelli" target="_blank"><img src="img/andrea_gelli.PNG" alt="Andrea Gelli" class="staff_member_img" />
                     <br/>
                     Andrea Gelli</a>
+            </div>
+            <div>
+                <h4>
+                    Agile Venture Prato è un evento interamente no profit, organizzato dall'Agile Venture Prato Team in collaborazione con l'Italian Agile Movement. <br> L'evento ha la finalità di diffondere la cultura Agile in Italia.
+                </h4>
             </div>
             <div class="page-scroll" style="margin-top: 50px">
                 <a href="#staytuned" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
@@ -313,20 +306,17 @@
                     <h2>Stay tuned!</h2>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/xxxxx" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="https://twitter.com/AgileMovementIT" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
-                            <a href="http://www.linkedin.com/xxxxxxx" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
+                            <a href="https://www.linkedin.com/company/italian-agile-movement/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <div class="page-scroll" style="margin-top: 50px">
-                <a href="#map" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
-            </div>
+
         </section>
 
-        <div id="map"></div>
         <!-- Core JavaScript Files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
