apportati suggerimenti Andrea

--- a/prato/index.html
+++ b/prato/index.html
@@ -173,7 +173,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                   <h2>Call for sessions<br/></h2>
 
-                  <a href="mailto:agileventureprato@agilemovement.it" class="abstract-link"><h4>Invia subito la tua proposta !</h4></a>
+                  <a href="mailto:agileventureprato@agilemovement.it" class="abstract-link"><h4>Invia subito la tua proposta!</h4></a>
                   <p>
                       <a href="mailto:agileventureprato@agilemovement.it" class="abstract-link">agileventureprato@agilemovement.it</a>
                       </p>
@@ -237,7 +237,7 @@
                         <p>
                             Per raggiungere il Polo Universitario Città di Prato utilizzare
                     l'uscita autostradale <strong>Prato Est</strong> e seguire le indicazioni per il centro città.
-                            L'università si trova a 100 metri dal duomo, nella parte nord nella città.
+                            L'università si trova a 100 metri dal Duomo, nella parte nord della città.
                             E' presente un ampio parcheggio.
                         </p>
                     </div>
