--- a/prato/index.html
+++ b/prato/index.html
@@ -76,7 +76,7 @@
                             <div class="brand-frame">
                                 <h1 class="brand-heading"><img class="resp" id="headerimg" src="img/logominiiadpo2018-200b.png"/></h1>
                                 <p class="intro-text">
-                                    <b>Prato, 29 settembre 2018</b>
+                                    <b>Prato, sabato 29 settembre 2018</b>
                                 </p>
                                 <div class="page-scroll">
                                     <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
