tolta descrizione sotto al programma

--- a/prato/index.html
+++ b/prato/index.html
@@ -106,8 +106,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Programma</h2>
                     <br>
-                    <h3>Il programma sarà disponibile a breve. <br>
-                        Iscriviti alla newsletter per non perdere tutti gli aggiornamenti.</h3>
+                    <h3>Il programma sarà disponibile a breve.</h3>
                     <br>
                 </div>
             </div>
