--- a/prato/index.html
+++ b/prato/index.html
@@ -95,7 +95,7 @@
                 Il mondo corre veloce e le uniche costanti sono le variabili.<br>
                 Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.<br>
                 <b>L'alternativa Agile</b> per migliorare la capacità di <b>risposta ai cambiamenti</b> e <b>creare valore</b> nel più breve tempo possibile.<br>
-                Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori e le pratiche Agile.
+                Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori e le pratiche Agili.
                 </p>
             </div>
         </section>
