--- a/prato/index.html
+++ b/prato/index.html
@@ -92,10 +92,14 @@
         <section id="descrizione" class="content-section text-center">
             <div>
                 <p>
-                Il mondo corre veloce e le uniche costanti sono le variabili.<br>
-                Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.<br>
-                <b>L'alternativa Agile</b> per migliorare la capacità di <b>risposta ai cambiamenti</b> e <b>creare valore</b> nel più breve tempo possibile.<br>
-                Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori e le pratiche Agili.
+                    Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.
+                    <br>
+                    <b>Un approccio Agile</b> può essere l'alternativa per migliorare la capacità di
+                    <b>rispondere ai cambiamenti</b> e
+                    <b>creare valore</b> in modo efficace.
+                    <br>
+                    <br> Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori
+                    e le pratiche Agili.
                 </p>
             </div>
         </section>
