Updated staff section copy

--- a/prato/index.html
+++ b/prato/index.html
@@ -295,7 +295,7 @@
             </div>
             <div>
                 <h4>
-                    Agile Venture Prato è un evento interamente no profit, organizzato dall'Agile Venture Prato Team in collaborazione con l'Italian Agile Movement. <br> L'evento ha la finalità di diffondere la cultura Agile in Italia.
+                    Agile Venture Prato è un evento interamente no profit, organizzato in collaborazione con l'Italian Agile Movement. L'evento ha la finalità di diffondere la cultura Agile in Italia.
                 </h4>
             </div>
             <div class="page-scroll" style="margin-top: 50px">
