--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità..">
         <meta name="author" content="">
 <!-- raoul -->
-        <meta property="og:image" content="http://agileday.it/mini/2018/prato/img/logoiadprato-400b.png" />
-        <meta property="og:url" content="http://agileday.it/mini/2018/prato/" />
+        <meta property="og:image" content="//agileday.it/mini/2018/prato/img/logoiadprato-400b.png" />
+        <meta property="og:url" content="//agileday.it/mini/2018/prato/" />
         <meta property="og:title" content="Agile Venture Prato2018" />
         <meta property="og:description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.." />
 
@@ -15,15 +15,15 @@
         <link rel="shortcut icon" href="img/favicon.png?2" />
         <link rel="icon" type="image/png" href="img/favicon.png?2" />
         <!-- Bootstrap Core CSS -->
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <!-- Fonts -->
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-        <link href="css/mb-comingsoon-iceberg.css" rel="stylesheet" />
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href="/css/mb-comingsoon-iceberg.css" rel="stylesheet" />
         <!-- Custom Theme CSS -->
-        <link href="css/grayscale.css" rel="stylesheet">
-        <link href="css/miniiad.css" rel="stylesheet">
+        <link href="/css/grayscale.css" rel="stylesheet">
+        <link href="/css/miniiad.css" rel="stylesheet">
     </head>
     <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
@@ -213,7 +213,7 @@
                             </p>
                         </li>
                     </ul>
-                    <a href="http://www.pin.unifi.it/" class="btn btn-default btn-lg" target="_blank">Polo Universitario Città di Prato</a>
+                    <a href="//www.pin.unifi.it/" class="btn btn-default btn-lg" target="_blank">Polo Universitario Città di Prato</a>
                 </div>
             </div>
             <br/>
@@ -321,9 +321,9 @@
         </section>
 
         <!-- Core JavaScript Files -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="js/grayscale.js"></script>
