--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
         <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-        <link href="/css/mb-comingsoon-iceberg.css" rel="stylesheet" />
+        <link href="css/mb-comingsoon-iceberg.css" rel="stylesheet" />
         <!-- Custom Theme CSS -->
-        <link href="/css/grayscale.css" rel="stylesheet">
-        <link href="/css/miniiad.css" rel="stylesheet">
+        <link href="css/grayscale.css" rel="stylesheet">
+        <link href="css/miniiad.css" rel="stylesheet">
     </head>
     <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
