--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <h2>Stay tuned!</h2>
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/AgileMovementIT" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="https://twitter.com/agileday" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
                             <a href="https://www.linkedin.com/company/italian-agile-movement/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square fa-fw"></i> <span class="network-name">LinkedIn</span></a>
