Change Sky logo

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <img src="img/gold_sponsor.png" style="height: 20%; width: 20%; object-fit: contain"/>
                         <div class="sponsor-line">
                             <div class="sponsor-div">
-                                <p style=""><img src="img/sky_condivisione.jpg" style="height: 40%; width: 40%; object-fit: contain"/></p>
+                                <p style=""><img src="img/logo_sky.png" style="height: 40%; width: 40%; object-fit: contain"/></p>
                             </div>
                         </div>
                     </div>
