Hide press section

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         <li class="page-scroll">
                             <a href="#sponsor">Sponsor</a>
                         </li>
-                        <li class="page-scroll">
+                        <!--li class="page-scroll">
                             <a href="#press">Press</a>
-                        </li>
+                        </li-->
                         <li class="page-scroll">
                             <a href="#c4s">C4Sessions</a>
                         </li>
@@ -139,12 +139,12 @@
                 </div>
     
                 <div class="page-scroll" style="margin-top: 20px">
-                    <a href="#press" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+                    <a href="#c4s" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
                 </div>
             </div>
         </section>
 
-        <section id="press" class="content-section text-center">
+        <!--section id="press" class="content-section text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
@@ -157,7 +157,7 @@
                     <a href="#c4s" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
                 </div>
             </div>
-        </section>
+        </section-->
         
         <section id="c4s" class="content-section text-center">
           <div class="container">
