Added Massimiliano Atzori, removed Press section

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                         <li class="page-scroll">
                             <a href="#sponsor">Sponsor</a>
                         </li>
-                        <li class="page-scroll">
+                        <!--<li class="page-scroll">
                             <a href="#press">Press</a>
-                        </li>
+                        </li>-->
                         <li class="page-scroll">
                             <a href="#c4s">C4Sessions</a>
                         </li>
@@ -139,11 +139,12 @@
                 </div>
     
                 <div class="page-scroll" style="margin-top: 20px">
-                    <a href="#press" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+                    <a href="#c4s" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
                 </div>
             </div>
         </section>
 
+        <!--
         <section id="press" class="content-section text-center">
             <div class="container">
                 <div class="row">
@@ -158,6 +159,7 @@
                 </div>
             </div>
         </section>
+        -->
         
         <section id="c4s" class="content-section text-center">
           <div class="container">
@@ -277,6 +279,11 @@
                     <a href="https://www.linkedin.com/in/andreagelli" target="_blank"><img src="img/andrea_gelli.jpg" alt="Andrea Gelli" class="staff_member_img" />
                         <br/>
                         Andrea Gelli</a>
+                </div>
+                <div class="staff_member">
+                    <a href="https://www.linkedin.com/in/amaxis/" target="_blank"><img src="img/massimiliano_atzori.jpg" alt="Massimiliano Atzori" class="staff_member_img" />
+                        <br/>
+                        Massimiliano Atzori</a>
                 </div>
                 <div class="staff_member">
                     <a href="https://www.linkedin.com/in/tbaldovino/" target="_blank"><img src="img/tommaso_baldovino.jpg" alt="Tommaso Baldovino" class="staff_member_img" />
