New cover with white logo

--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
                         <div class="col-md-8 col-md-offset-2">
 
                             <div class="brand-frame">
-                                <h1 class="brand-heading"><img class="resp" id="headerimg" src="img/IAM_Venture_prato.png"/></h1>
-                                <p class="intro-text">
-                                    <strong>Prato, sabato 29 settembre 2018</strong>
-                                </p>
+                                <h1 class="brand-heading"><img class="resp" id="headerimg" src="img/agile-venture-prato.png" alt="Agile Venture Prato" /></h1>
+                                <p class="intro-text">Prato, sabato 29 settembre 2018</p>
                             </div>
                                 <div class="page-scroll">
                                     <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
