Add keynote section

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <link rel="shortcut icon" href="img/favicon.png?3" />
         <link rel="icon" type="image/png" href="img/favicon.png?3" />
         <!-- Bootstrap Core CSS -->
-        <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <!-- Fonts -->
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-        <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link href="css/mb-comingsoon-iceberg.css" rel="stylesheet" />
         <!-- Custom Theme CSS -->
         <link href="css/grayscale.css" rel="stylesheet">
@@ -49,6 +49,9 @@
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden">
                             <a href="#page-top"></a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#keynote">Keynote</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#programma">Programma</a>
@@ -85,7 +88,7 @@
                                 <p class="intro-text">Prato, sabato 29 settembre 2018</p>
                             </div>
                                 <div class="page-scroll">
-                                    <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+                                    <a href="#keynote" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
                                 </div>
                         </div>
                     </div>
@@ -97,6 +100,44 @@
             <p>Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.<br>
             <b>Un approccio Agile</b> può essere l'alternativa per migliorare la capacità di <b>rispondere ai cambiamenti</b> e <b>creare valore</b> in modo efficace.</p>
             <p>Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori e le pratiche Agili.</p>
+        </section>
+
+        <section id="keynote" class="content-section text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h2>Keynote</h2>
+                        <h3 class="keynote__title">Agile pro nobis</h3>
+                        <div>
+                            <p>In vent'anni o poco meno l'approccio agile allo sviluppo del software è passato da un esoterismo ridicolizzato ad una religione mainstream, con tutto il corpus di credenze e prassi tipiche di entrambe le fasi.</p>
+                            <p>Chi vuole più codice e meno alberi da abbracciare e chi vuole più soft skill e meno sindrome di Asperger; chi vuole redimere le banche, chi vuole l’ascesi del garage startupparo; chi rimane aggrappato alle tavole del Manifesto e chi reinventa la Ruota™ per fare presa su un mercato in cui è davvero difficile differenziarsi. Ne abbiamo di ogni tipo. </p>
+                            <p>C'è qualcosa che non va in questo attaccamento viscerale per come le cose andrebbero fatte senza la stessa cura e la stessa quantità di discorsi dedicati invece a cosa si dovrebbe fare. Perché, come nelle religioni vere, non bisogna dimenticare che anche l’agile è nato con uno scopo molto semplice: fare tutti felici. Il problema è che “semplice” e “facile” non sono la stessa cosa!</p>
+                            <p>E nel mondo del software non c'è un al di là in cui rifarsi.</p>
+                        </div>
+                        <div class="keynote__bio">
+                            <div class="speaker">
+                              <a href="http://jacoporomei.com/" target="_blank">
+                                <img src="img/jacopo_romei.jpg" alt="Jacopo Romei" class="speaker__img">
+                              </a>
+                              <div class="speaker__name">
+                                <a href="http://jacoporomei.com/" target="_blank">Jacopo Romei</a>
+                              </div>
+                            </div>
+                            <p class="speaker__description">
+                                <p>Nel 2003 ho intravisto un nuovo modo, agile, di fare software e, imprenditore giovanissimo, ho deciso di provare. Di base odio sprecare energie e quindi da 15 anni i lavori sono in corso. Imprenditore seriale, ho introdotto i metodi agili in Doralab, ideato e eBay Italia, ma nel 2011 ho capito che il problema spesso è nella governance delle aziende e nella negoziazione dei contratti, passando per Cocoon Projects e la board dello European Organisation Design Forum (EODF).</p>
+                                <p>In genere vengo ingaggiato da chi vuole sprecare meno tempo, denaro ed entusiasmo. Aiuto le persone che lavorano insieme a lavorare meglio perché credo che sia un bel pezzo di vita per tutti noi. </p>
+                                <p>Mi piace scrivere cose per organizzare la testa: "Pro PHP Refactoring", "PHP Best Practices" e, nel 2017, "Extreme Contracts" su negoziazione e contratti per il "knowledge work" e ho aiutato Jurgen Appelo a pubblicare "Management 3.0".</p>
+                                <p>Sono tra i co-fondatori del network Agile Lean Europe e del PHP User Group Roma, ma dato che le cose belle per un nerd in quest'epoca sono tante, ho fondato anche l'Arduino User Group Roma. </p>
+                                <p>Sono uno speaker seriale e mi piace un sacco descrivere il mondo come lo vorrei sul palco di eventi nazionali e internazionali di riferimento.</p>
+                                <p>Ho la patente nautica perché il mare è il mare, il brevetto di pilota di aliante perché il volo è il volo e sono un facilitatore LSP certificato da Lucio Margulis.</p>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="page-scroll" style="margin-top: 50px">
+                    <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+                </div>
+            </div>
         </section>
 
         <section id="programma" class="content-section text-center">
@@ -316,9 +357,9 @@
         </section>
 
         <!-- Core JavaScript Files -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
         <!-- Custom Theme JavaScript -->
         <script src="js/grayscale.js"></script>
