--- a/index.html
+++ b/index.html
@@ -269,12 +269,11 @@
                     </div>
                 </div>
                 <div class="content-section text-center">
-                    <img src="img/mappa.PNG" style="height: 80%; width: 80%; object-fit: contain"/>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2875.575159196275!2d11.096311015919847!3d43.88535317911401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x132af6436c87ab43%3A0x295cffd779e33713!2sPIN+-+Polo+Universitario+Citt%C3%A0+di+Prato!5e0!3m2!1sit!2sit!4v1529958696999" width="100%" height="433" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
 
             </div>
-
-              <div class="page-scroll" style="margin-top: 50px" align="center">
+            <div class="page-scroll" style="margin-top: 50px" align="center">
                 <a href="#staff" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
             </div>
         </section>
