--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                                     <p style=""><img src="img/logo_sky.png" style="height: 40%; width: 40%; object-fit: contain"/></p>
                                 </div>
                             </div>
+                            <img src="img/silver_sponsor.png" style="height: 20%; width: 20%; object-fit: contain" hidden="hidden"/>
+                            <div class="sponsor-line">
+                                <div class="sponsor-div">
+                                    <p style="" hidden="hidden"><img src="img/logo_avanscoperta.png" style="height: 40%; width: 40%; object-fit: contain"/></p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
