Add meta for Twitter card - image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="author" content="">
 <!-- raoul -->
         <meta name="twitter:card" content="summary" />
+        <meta property="twitter:image" content="//agileday.it/mini/2018/prato/img/IAM_Venture_prato.png" />
         <meta property="og:image" content="//agileday.it/mini/2018/prato/img/IAM_Venture_prato.png" />
         <meta property="og:title" content="Agile Venture Prato2018" />
         <meta property="og:description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.." />
