New sponsor headlines and social images

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <meta name="author" content="">
 <!-- raoul -->
         <meta name="twitter:card" content="summary" />
-        <meta property="twitter:image" content="//agileday.it/mini/2018/prato/img/IAM_Venture_prato.png" />
-        <meta property="og:image" content="//agileday.it/mini/2018/prato/img/IAM_Venture_prato.png" />
+        <meta property="twitter:image" content="//agileday.it/mini/2018/prato/img/agile-venture-twitter.png" />
+        <meta property="og:image" content="//agileday.it/mini/2018/prato/img/agile-venture-social.png" />
         <meta property="og:title" content="Agile Venture Prato2018" />
         <meta property="og:description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.." />
 
@@ -103,7 +103,7 @@
             <b>Un approccio Agile</b> può essere l'alternativa per migliorare la capacità di <b>rispondere ai cambiamenti</b> e <b>creare valore</b> in modo efficace.</p>
             <p>Software development, management, marketing: una giornata per scoprire o approfondire i principi, i valori e le pratiche Agili.</p>
         </section>
-
+        
         <section id="keynote" class="content-section text-center">
             <div class="container">
                 <div class="row">
@@ -165,22 +165,24 @@
                         <p><strong>Vuoi diventare sponsor?</strong> Scrivici: <br><a href="mailto:agileventureprato@agilemovement.it">agileventureprato@agilemovement.it</a></p>
                     </div>
                 </div>
-                <h3>I nostri sponsor</h3>
                 <div class="row">
                     <div class="sponsor-list col-lg-12">
                         <div class="sponsor-container">
-                            <img src="img/gold_sponsor.png" style="height: 20%; width: 20%; object-fit: contain"/>
+                            <img class="sponsor-title" src="img/sponsor-gold.png" alt="Gold Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
-                                    <p style=""><img src="img/logo_sky.png" style="height: 40%; width: 40%; object-fit: contain"/></p>
+                                    <p><img src="img/logo_sky.png" /></p>
                                 </div>
                             </div>
-                            <img src="img/silver_sponsor.png" style="height: 20%; width: 20%; object-fit: contain" hidden="hidden"/>
+                            
+                            <!--
+                            <img class="sponsor-title" src="img/sponsor-silver.png" alt="Silver Sponsor" />
                             <div class="sponsor-line">
                                 <div class="sponsor-div">
-                                    <p style="" hidden="hidden"><img src="img/logo_avanscoperta.png" style="height: 40%; width: 40%; object-fit: contain"/></p>
+                                    <p><img src="img/logo_avanscoperta.png" /></p>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </div>
                 </div>
