--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <meta name="author" content="">
 <!-- raoul -->
         <meta name="twitter:card" content="summary" />
-        <meta property="twitter:image" content="//agileday.it/mini/2018/prato/img/agile-venture-social.png" />
-        <meta property="og:image" content="//agileday.it/mini/2018/prato/img/agile-venture-social.png" />
+        <meta property="twitter:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-social.png" />
+        <meta property="og:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-social.png" />
         <meta property="og:title" content="Agile Venture Prato2018" />
         <meta property="og:description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità.." />
 
