updated Twitter metatags

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <meta name="description" content="Il mondo corre veloce e le uniche costanti sono le variabili. Adattarsi e rinnovarsi non sono più opzioni ma sono necessità..">
         <meta name="author" content="">
 <!-- raoul -->
-        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-twitter.png" />
+        <meta name="twitter:title" content="Agile Venture Prato2018" />
         
         <meta property="og:image" content="https://agileday.it/mini/2018/prato/img/agile-venture-social.png" />
         <meta property="og:title" content="Agile Venture Prato2018" />
