Added partner section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,18 @@
                                     <p><img src="img/logo_avanscoperta.png" /></p>
                                 </div>
                             </div>
+
+                            <h3 class="partner-title">Partner</h3>
+                            <div class="partner-line">
+                                <div class="partner-div">
+                                    <p><img src="" alt="" /></p>
+                                </div>
+                                <div class="partner-div">
+                                    <p><img src="" alt="" /></p>
+                                </div>
+                            </div>
                             -->
+                            
                         </div>
                     </div>
                 </div>
